overlays/dev/patches/backend-deployment.yaml
# overlays/dev/patches/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-backend
spec:
  template:
    spec:
      containers:
        - name: events-backend
          image: aklilu13/events-backend:dev-latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
