overlays/dev/patches/frontend-deployment.yaml
# overlays/dev/patches/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habesha-hub
spec:
  template:
    spec:
      containers:
        - name: habesha-hub
          image: aklilu13/habesha-hub:0.1.7
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
