overlays/dev/patches/ingress.yaml
# overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habesha-hub
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - habesha-hub.com
        - api.habesha-hub.com
      secretName: habesha-hub-tls
  rules:
    - host: habesha-hub.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: habesha-hub
                port:
                  number: 80
    - host: api.habesha-hub.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: events-backend-service
                port:
                  number: 8080
